Implemented order parameter in the list handler.
